ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
      - path: /material
        pathType: Prefix
        backend:
          service:
            name: material-madaurus
            port:
              number: 8080
      - path: /staff
        pathType: Prefix
        backend:
          service:
            name: staff-madaurus
            port:
              number: 8080
